--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.1",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.11",
+    "@types/validator": "^13.12.0",
     "nodemon": "^3.1.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.4"
